Bug 151947 - open merge delimiters prevents loading all data
Summary: open merge delimiters prevents loading all data
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.5.0 target:7.4.4 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-11-07 22:25 UTC by Pierre Fortin
Modified: 2022-11-16 12:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
one-space delimited sample file (112 bytes, text/plain)
2022-11-07 22:32 UTC, Pierre Fortin
Details
3-space delimited file (208 bytes, text/plain)
2022-11-07 22:38 UTC, Pierre Fortin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre Fortin 2022-11-07 22:25:12 UTC
Description:
trying to open a multi-space delimited file. As soon as I enable [X] Merge delimiters, only the first column is visible and available to load.

Steps to Reproduce:
1. open space delimited file
2. select Space as delimiter (file contents visible, with empty colums)
3. select Merge delimiters (all but first column disappear, and do not load)

Actual Results:
Only first column is loaded. If first character on each record is the same as the selected delimiter, no data is visible or loaded. e.g.,  Other = /
and records contain:  /home/userid/...

Expected Results:
all data after first delimiter disappears and is not loaded


Reproducible: Always


User Profile Reset: No

Additional Info:
merge delimiters, remove intervening cells, display data in adjacent cells, load data as expected.
Comment 1 Pierre Fortin 2022-11-07 22:32:12 UTC
Created attachment 183452 [details]
one-space delimited sample file

Select Space delimiters. Data appears in adjacent cells as expected:

[x][a][b][c][d][e][f]

Select Merge delimiters and visible data is now:

[x][ ][ ][ ][ ][ ][ ]

OK:  only first column is loaded.
Comment 2 Pierre Fortin 2022-11-07 22:38:30 UTC
Created attachment 183453 [details]
3-space delimited file

Select Space delimiters. Data appears in adjacent cells as expected:

[x][ ][ ][a][ ][ ][b][ ][ ][c][ ][ ][d][ ][ ][e][ ][ ][f]

Select Merge delimiters and visible data is now:

[x][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ][ ]

OK:  only first column is loaded.
Comment 3 Pierre Fortin 2022-11-07 22:41:14 UTC
Oops...  copied/pasted and forgot to remove "adjacent"
Comment 4 m_a_riosv 2022-11-08 02:14:23 UTC
Reproducible. Seems something strange with spaces.
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b1a066b935158dc029939520c8fe70b029cb311
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Works for me with:
Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 5 raal 2022-11-08 22:33:57 UTC
This seems to have begun at the below commit.
Adding Cc: to Eike Rathke ; Could you possibly take a look at this one?
Thanks
 a712d763e6c037d9c5690c595a4ef275ab5d5b4f is the first bad commit
commit a712d763e6c037d9c5690c595a4ef275ab5d5b4f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Oct 2 17:14:14 2022 +0200

    source cf777cfcb22647b1f2d6ace307fbcc4f6d2cca30

https://git.libreoffice.org/core/+/cf777cfcb22647b1f2d6ace307fbcc4f6d2cca30
Comment 6 Eike Rathke (retired, only occasionally showing up) 2022-11-10 19:28:10 UTC
Also in 7.4.3.1.0+
Comment 7 Commit Notification 2022-11-11 13:25:43 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5db9d8356c8fdc732942357cd2171ba27eda8647

Resolves: tdf#151947 Merging separators must not scan for field end

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Eike Rathke (retired, only occasionally showing up) 2022-11-11 13:27:00 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/142527 for 7-4
https://gerrit.libreoffice.org/c/core/+/142528 for 7-4-3
Comment 9 Pierre Fortin 2022-11-13 05:04:25 UTC
Looks fixed to me... Thanks!

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab4e40941e9ebae83f98ba918440b03eac5bdcaa
CPU threads: 20; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 10 Commit Notification 2022-11-15 10:13:38 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/881fb6f7c06444c58551f71730d97c51a840fbf5

Resolves: tdf#151947 Merging separators must not scan for field end

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-11-16 12:14:52 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-3":

https://git.libreoffice.org/core/commit/271b5d979a5b498c3e44b031af7dc3002355a0fd

Resolves: tdf#151947 Merging separators must not scan for field end

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.