Resolves: tdf#151947 Merging separators must not scan for field end

Regression introduced with

    commit cf777cfcb22647b1f2d6ace307fbcc4f6d2cca30
    CommitDate: Sun Oct 2 17:07:06 2022 +0200

        Resolves: tdf#125110 tdf#151211 Disentangle the convoluted CSV/TSV-clip import

a copy-paste replacement logic error.

Change-Id: Ibd699a4edfa9f88da26d888afa8567ee34e78a5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142572
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 5db9d8356c8fdc732942357cd2171ba27eda8647)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142528
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>