sc/source/ui/docshell/impex.cxx
@@ -1924,7 +1924,7 @@ const sal_Unicode* ScImportExport::ScanNextFieldFromString( const sal_Unicode* p
     }
     if ( bMergeSeps )           // skip following delimiters
     {
-        while (!lcl_isFieldEnd( *p, pSeps))
+        while (*p && ScGlobal::UnicodeStrChr( pSeps, *p))
             p++;
     }
     return p;
